Bug 269590 - Accented greek characters not entered correctly when file is open via dolphin
Summary: Accented greek characters not entered correctly when file is open via dolphin
Status: RESOLVED FIXED
Alias: None
Product: kile
Classification: Applications
Component: editor (other bugs)
Version First Reported In: 2.1b5
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: Michel Ludwig
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-28 08:11 UTC by Nikos Platis
Modified: 2011-04-26 00:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nikos Platis 2011-03-28 08:11:18 UTC
Version:           2.1b5 (using KDE 4.6.1) 
OS:                Linux



Reproducible: Always

Steps to Reproduce:
- Double-click a .tex file in Dolphin, in order to open in with Kile
- Try to input some accented greek character, for example ά by typing ' and then α (having installed the greek keyboard in KDE).

Actual Results:  
All I get is 'α (i.e. a separate ' and a separate α)

Expected Results:  
I should get an ά

Ιf I open the file via Kile menus (File->Open or from the Recent Files list) accented greek characters are entered correctly.

Moreover, if I leave Kile open, close the document, and then double-click it in Dolphin, it opens in Kile and accented greek characters are entered correctly.

I noticed that if I close Kile, then double-click the file immediately, accented greek characters are entered correctly most of the time. This could indicate some bug that appears only when Kile is loaded for the first time and opens a file at the same time...
Comment 1 Nikos Platis 2011-04-01 18:18:08 UTC
Let me also note that I do not remember seeing this problem in earlier versions of Kile (I am using Kile for many years).
Comment 2 Michel Ludwig 2011-04-03 11:56:08 UTC
Can you try out if the same occurs when you open the file in KWrite / Kate instead of Kile?

Also, is the key for ' a dead key on your keyboard, i.e. does the ' character appear when you press the ' key, or does nothing appear?
Comment 3 Nikos Platis 2011-04-03 18:46:27 UTC
I just tried KWrite, everything works fine.

When using the greek keyboard in kde, the accent key is indeed dead: when you press it you see nothing, and if you then enter a vowel it comes out accented.

Let me know if I can help any further.
Comment 4 Michel Ludwig 2011-04-23 20:08:41 UTC
Git commit e9e7d7984258809f73c4d027fa8e1afd25b19702 by Michel Ludwig.
Committed on 23/04/2011 at 20:17.
Pushed by mludwig into branch 'master'.

Fix the problem that dead keys are sometimes treated as 'alive'.

Work around a potential Qt bug which can result in dead keys being treated as
'alive' in some circumstances (probably when 'setFocus' is called when the
widget hasn't been shown yet)

BUG: 269590

M  +8    -6    src/kile.cpp     
M  +19   -13   src/kileviewmanager.cpp     
M  +2    -0    src/kileviewmanager.h     

http://commits.kde.org/kile/e9e7d7984258809f73c4d027fa8e1afd25b19702
Comment 5 Michel Ludwig 2011-04-23 20:09:37 UTC
(In reply to comment #3)
> Let me know if I can help any further.

Can you please compile the most recent Git version of Kile and verify that the above fix also works for you? Thanks!
Comment 6 Nikos Platis 2011-04-26 00:04:56 UTC
I compiled the latest version from Git and this problem seems indeed to be solved. I have not been able to use this version extensively, just tested this issue. I will probably be working with Kile next week so I will report back if I find any related problem.