Fix the problem that dead keys are sometimes treated as 'alive'.

Work around a potential Qt bug which can result in dead keys being treated as
'alive' in some circumstances (probably when 'setFocus' is called when the
widget hasn't been shown yet)

BUG: 269590